[tool.poetry]
name = "bwh-sensor"
version = "0.1.0"
description = ""
authors = ["Migyeong Gwak <m.gwak@samsung.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.24.4"
scikit-learn = ">=1.3.2"
scipy = ">=1.10.1"
heartpy = ">=1.2.7"
pyhrv = ">=0.4.1"
pandas = ">=2.0.3"
peakutils = ">=1.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
